--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,6 +34,14 @@ jobs:
           mkdir -p .ci/media
           mkdir -p .ci/dropbox
 
+      - name: Backend setup.py
+        working-directory: backend
+        run: python setup.py
+
+      - name: Django setup
+        working-directory: backend
+        run: uv run manage.py setup
+
       - name: Run backend tests
         working-directory: backend
         run: uv run -m coverage run manage.py test api
