150126 frontend test and runner (#1)
* Frontend testing

* Frontend testing

* Minor test fixes

* Github actions tests

* FIxed setup issue

* FIxed setup issue

* workflow setup

* workflow setup

* workflow setup

* Add caching

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -3,7 +3,7 @@ name = "backend"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.14"
+requires-python = ">=3.13"
 dependencies = [
 "django",
 "django-extensions",
@@ -42,3 +42,8 @@ exclude_lines = [
 
 [tool.coverage.html]
 directory = "htmlcov"
+
+[dependency-groups]
+dev = [
+    "ty>=0.0.12",
+]
