Added qtservice integration with testing. compare and view aren't there just yet. Other misc changes

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,6 +13,7 @@ jobs:
       CERT_PATH: selftest_cert
       KEY_FILE_PATH: selftest_key
       DJANGO_SECRET_KEY: ci-secret-key
+      QT_QPA_PLATFORM: offscreen
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -48,9 +49,9 @@ jobs:
         working-directory: backend
         run: python setup.py
 
-      - name: Run backend tests
+      - name: Run backend + Qt tests
         working-directory: backend
-        run: uv run -m coverage run manage.py test api
+        run: uv run python scripts/run_tests.py --coverage
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
