--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -63,6 +63,10 @@ jobs:
         working-directory: backend
         run: python setup.py
 
+      - name: Ruff format check
+        working-directory: backend
+        run: uv run ruff format --check .
+
       - name: Run backend + Qt tests
         working-directory: backend
         run: uv run python scripts/run_tests.py --coverage
