Front end formatter added, pre-commit format hooks added

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,12 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
-    "test": "vitest",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "test": "npm run test:format && vitest",
     "test:watch": "vitest --watch",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "test:format": "prettier --check ."
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -33,6 +36,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "jsdom": "^26.1.0",
+    "prettier": "^3.3.3",
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "^3.2.4",
